--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.trapezium {
+    width: '100%';
+    height: 50px;
+    border-top: 30px solid #10b981; 
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+}
