--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 @tailwind utilities;
 
 .trapezium {
-    width: '100%';
-    height: 50px;
-    border-top: 30px solid #10b981; 
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
+  width: "100%";
+  height: 50px;
+  border-top: 30px solid #10b981;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
 }
